# sshoosh

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Justfile  README.md  SECURITY.md  deny.toml  install.sh
.github/workflows/: ci.yml  docker.yml  pages.yml  release.yml  security.yml
docs/: astro.config.mjs  package-lock.json  package.json  pnpm-lock.yaml
docs/public/assets/: demo.webm
docs/src/: content.config.ts
docs/src/components/: DocsShell.astro  SiteChrome.astro
docs/src/pages/: index.astro  manual.astro
docs/src/styles/: site.css
migrations/: 20260430000000_initial.sql  20260430000001_pending_username.sql  20260430000001_remote_security.sql  20260430010000_presence_sessions.sql  20260430020000_remove_webhooks.sql  20260430030000_bootstrap_tokens.sql  20260501000000_saved_messages.sql  20260501000001_notification_archive.sql  20260501000002_performance_counters.sql  20260501000003_dm_sidebar_scale.sql  20260501000004_device_link_tokens.sql  20260501000005_message_labels.sql  20260501000006_query_performance.sql  20260501000007_username_reservations.sql
packaging/: sshoosh.service
packaging/homebrew/: sshoosh.rb.template
scripts/: demo_seed.py  update_homebrew_tap.py
src/: admin_cli.rs  app.rs  cli.rs  color.rs  config.rs  db.rs  dev.rs  lib.rs  main.rs  main_tests.rs  output.rs  service.rs  ssh.rs  terminal.rs  time_format.rs
src/app/: action.rs  commands.rs  compose.rs  input.rs  input_handlers.rs  lifecycle.rs  mod.rs  navigation.rs  render.rs  render_bridge.rs  state.rs  tests.rs  theme.rs  util.rs
src/app/commands/: args.rs  autocomplete.rs  mod.rs  parse.rs  registry.rs  specs.rs  tests.rs
src/app/render/: chrome.rs  composer.rs  detail.rs  markdown.rs  messages.rs  mod.rs  overlays.rs  selection.rs  shell.rs  tests.rs  workspace.rs
src/cli/: args.rs  daemon.rs  dev.rs  mod.rs  run.rs  tests.rs
src/client/: accounts.rs  action.rs  audit.rs  channels.rs  command_outcome.rs  feeds.rs  messages.rs  mod.rs  notifications.rs  session.rs  view_model.rs
src/db/: config.rs  encryption.rs  executor.rs  fs.rs  lease.rs  maintenance.rs  migrations.rs  mod.rs  mutation.rs  query_encryption.rs  time.rs
src/domain/: account.rs  channel.rs  ids.rs  label.rs  message.rs  mod.rs  name.rs  notification.rs  search.rs
src/features/: mod.rs  prelude.rs
src/features/accounts/: actions.rs  format.rs  mod.rs  model.rs  state.rs
src/features/audit/: actions.rs  mod.rs  model.rs  state.rs
src/features/channels/: actions.rs  format.rs
src/features/events/: db.rs  mod.rs  model.rs
src/features/feeds/: actions.rs  mod.rs  model.rs
src/features/messages/: actions.rs  format.rs  mod.rs  model.rs  read_state.rs  state.rs
src/features/notifications/: actions.rs  format.rs  model.rs
src/features/shared/: action.rs  (+5 more)
src/service/: accounts.rs  audit_export.rs  bootstrap.rs  events.rs  invites_channels.rs  loaders.rs  mod.rs  models.rs  notifications_reactions.rs  permissions.rs  runtime.rs  state.rs  tests.rs  threads.rs  utils.rs  webhooks_audit_export.rs  write_ops.rs  writer.rs
src/ssh/: actions.rs  format.rs  mod.rs  render_loop.rs  server.rs  session.rs
tests/: daemon_e2e.rs  integration.rs
(+7 files in other folders)
