[package]
name = "sshoosh"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
base64 = "0.22"
clap = { version = "4.5", features = ["derive", "env"] }
crossterm = "0.29"
getrandom = { version = "0.4", features = ["sys_rng"] }
pkcs5 = "=0.8.0-rc.13"
rand = "0.8"
rand_core = "0.6"
ratatui = "0.30"
russh = "0.60.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "sqlite", "macros", "migrate", "time", "uuid"] }
thiserror = "2"
time = { version = "0.3", features = ["formatting", "macros", "serde"] }
tokio = { version = "1.49", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.10", features = ["serde", "v7"] }

[profile.release]
lto = "thin"
strip = "debuginfo"
