[package]
name = "sshoosh"
version = "0.1.6"
edition = "2024"

[dependencies]
anyhow = "1"
base64 = "0.22"
chacha20poly1305 = { version = "0.10", features = ["std"] }
clap = { version = "4.5", features = ["derive", "env"] }
crossterm = "0.29"
emojis = "0.8.1"
getrandom = { version = "0.4", features = ["sys_rng"] }
hostname = "0.4"
libc = "0.2"
libsql = { version = "0.9.30", default-features = false, features = ["core", "remote", "tls"] }
pkcs5 = "=0.8.0-rc.13"
pulldown-cmark = { version = "0.13.3", default-features = false }
rand = "0.8"
rand_core = "0.6"
ratatui = "0.30"
russh = { version = "0.60.1", default-features = false, features = ["aws-lc-rs", "flate2"] }
secrecy = "0.10"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
time = { version = "0.3", features = ["formatting", "local-offset", "macros", "parsing", "serde"] }
tokio = { version = "1.49", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tui-scrollview = "0.6.4"
url = "2.5.8"
uuid = { version = "1.10", features = ["serde", "v7"] }
zeroize = "1"

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
panic = "abort"
strip = true
